# market_analyzer

./: .env.example  .gitignore  API.md  CAPITAL_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETRADING_ADJUSTMENT_INTEGRATION.md  ETRADING_CAPABILITY_AUDIT.md  ETRADING_CHANGE_REQUEST.md  ETRADING_CHANGE_REQUEST_V2.md  ETRADING_INTEGRATION.md  ETRADING_INTEGRATION_STATUS.md  ETRADING_SESSION47_STATUS.md  FunctionalTesting.txt  HEDGING_PLAN.md  INDIA_ETRADING_INTEGRATION.md  MARKETS.md  MA_CHANGE_REQUEST_FOR_ETRADING.md  ONBOARDING.md  README.md  RETROSPECTION_CONTRACT.md  RISK_MANAGEMENT.md  SECURITY.md  SYSTEMATIC_GAPS.md  USER_MANUAL.md  project-management(COPY IN USERAREA).md  pyproject.toml  requirements.txt  stderr.txt  test_tools.py  zerodha_credentials.yaml.template
.collab/: CONTRACT_saas_broker_architecture.md  FEEDBACK_april_2026_new_apis.md  FEEDBACK_backoffice_adopted.md  FEEDBACK_benchmarking_integration.md  FEEDBACK_broker_connection_overlap.md  FEEDBACK_india_live_readiness.md  FEEDBACK_india_live_testing_fixes.md  FEEDBACK_no_broker_options.md  FEEDBACK_p0_whitelist_consumed.md  FEEDBACK_pipeline_migration_april.md  FEEDBACK_pricing_service_refactor.md  FEEDBACK_regression_overhaul.md  FEEDBACK_retrospection_data_gaps.md  FEEDBACK_scenario_stress_testing.md  FEEDBACK_simulated_data_weekend.md  FEEDBACK_stress_testing_portfolio.md  FEEDBACK_trust_level.md  FEEDBACK_universe_presets.md  FEEDBACK_workflow_apis.md  ID_REQUEST_ops_reporting.md  README.md  REQUEST_broker_boundary.md  REQUEST_import_account_number.md  REQUEST_trader_md_migration.md  REQUEST_vt_showcase_portfolio.md
.github/: PULL_REQUEST_TEMPLATE.md
challenge/: 30K_TRADER.md  __init__.py  harness.py  harness_support.py  models.py  portfolio.py  trader.py  trader_india.py  trader_stocks.py
docs/: ARCHITECTURE_EVOLUTION.md  BOOK_OF_WORK.md  CRASH_PLAYBOOK.md  DATA_INTERFACES.md  INDEPENDENT_TRADER_REVIEW.md  INDIA_HEDGING_VISION.md  LAUNCH_DRAFTS.md  OPEN_SOURCE_READINESS.md  PROJECT.md  PROJECT_SPEC.md  PROJECT_STATE.md  PROJECT_TASKS.md  ROADMAP.md  THE_FUNNEL.md  TRADING_DAY_TEST.md  TRUST_FRAMEWORK.md  go_live_scoring.md  project_architecture_living.md  project_integration_living.md  refactoring_summary_2026-03-30.md  tech_debt.md
income_desk/: __init__.py  arbitrage.py  capital_deployment.py  cross_market.py  currency.py  equity_research.py  execution_quality.py  futures_analysis.py  gate_framework.py  hedging.py  leg_execution.py  (+10 more)
(+692 files in other folders)
